Fix layout issues from wide cells for Firefox (#91)
I've noticed that #90 didn't improve the situation much for Firefox even though it solves the issue on Chrome and Safari. This PR fixes the layout issues for Firefox as well by moving the `overflow-x:auto` into a `div` inside the `td`.

This PR also makes the "Signature Capabilities" field display consistent with the "Events" field since capabilities and events are closely related in Pact, so there's no reason to display them differently.

* Avoid explicit uses of the leaf-cell css class

* Move overflow-x:auto to div inside td

Which make it work on Firefox as well

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,10 +30,6 @@ div.block-table div.spacer-row:last-child {
     display: none;
 }
 
-td.evtd {
-
-    }
-
 table.evtable {
     width: 100% !important;
     }
@@ -55,9 +51,11 @@ td {
     vertical-align: middle;
 }
 
-.leaf-cell {
-  overflow-x: auto;
-  max-width: 200px;
+.leaf-cell-td {
+    max-width: 200px;
+}
+.leaf-cell-div {
+    overflow-x: auto;
 }
 
 div.header-row {
